welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:4: error: ';' expected but integer literal found.
	if(Math.abs(n-100))<=10){a=true
                             ^