welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
var a :Boolean=false

def nearHundred(n:Int): Boolean = {
	if(Math.abs(n-100))<=10){a=true
  }else if (Math.abs(n-200)<=10){a=true}


return a

}